--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,6 +1,7 @@
 {
     "meta": {
-        "title": "I did",
-        "description": "Non-exhaustive list of various projects I've worked on."
+        "title": "Portfolio",
+        "title-long": "Portfolio Highlights",
+        "description": "This page is a showcase of different projects I have worked on."
     }
 }
