some fixed and hermita finished

--- a/src/content/projects/hermita.mdx
+++ b/src/content/projects/hermita.mdx
@@ -17,10 +17,22 @@ import hermitafight from '../../assets/hermita/hermitafight.png';
 <ProjectImage src={hermitalogo} alt="Logo of the game Hermita" />
 <ProjectImage src={hermitafight} alt="Screenshot of the game Hermita" />
 
-<ProjectText title="The game itself">Hermita is a school project I worked on with three other students. We developed a game in C# using Unity. Hermita was quite an ambitious project but it was very pleasant to work on and I was able to learn a lot from it.</ProjectText>
+<ProjectText title="The game itself">We play an old wizard whom lives alone on a sky island. However, he can play with friends online to fight monsters on a multiplayer sky island. We fight we spells only and killing monsters gives items which can be used later to craft items on the solo player island.</ProjectText>
 
 import hermitawebsite from '../../assets/hermita/hermitawebsite.png';
 
-<ProjectImage big src={hermitawebsite} alt="Screenshot of the website of the game Hermita" />
+<ProjectImage src={hermitawebsite} alt="Screenshot of the website of the game Hermita" />
 
-<ProjectText title="The game itself">Hermita is a school project I worked on with three other students. We developed a game in C# using Unity. Hermita was quite an ambitious project but it was very pleasant to work on and I was able to learn a lot from it.</ProjectText>
+<ProjectText title="My contributions">Creating this game required a wide range of skills. I built the website for our project, you can visit it [here](https://hermita-game.github.io/). The blog was easy to use but unfortunately, I was the only one who wrote content. Regarding my role in the team, I was working quite a lot on the creation of "tools" for the game. For example, I would define the behavior of monsters and my group members would use those objects to create every monster simply by adding images and some settings.</ProjectText>
+
+<ProjectText title="What I learned">Since I worked on the base tools for the project, I got to work on abstract concepts, at the core of our application, which I love doing! I had to come up with unique implementations that our very specific project needed. For example, Unity provides solutions for movement but none was fitting our needs. I implemented one from scratch, including the system for the monsters to follow the player.</ProjectText>
+
+import hermitapath from '../../assets/hermita/hermitapath.png';
+
+<ProjectImage src={hermitapath} alt="Screenshot of the pathfinding system in the game Hermita" />
+
+import hermitaunity from '../../assets/hermita/hermitaunity.png';
+
+<ProjectImage src={hermitaunity} alt="Screenshot of the Unity project of the game Hermita" />
+
+<ProjectText title="Conclusion">This project was also a great lesson on social issues a project can face like inactive group members. I was forced to adapt and go out of my comfort zone to sometimes take the lead. All in all, I'm very proud of what we achieved. You can try the game by downloading it on our website.</ProjectText>
