--- a/src/content/projects/blumenroeder.mdx
+++ b/src/content/projects/blumenroeder.mdx
@@ -1,10 +1,10 @@
 ---
 title: Blumenroeder Website
 relevance: 70
-group-size: 4
-begin-date: 2022-12-01
-end-date: 2023-06-02
-link: https://hermita-game.github.io/
+group-size: 1
+begin-date: 2020-05-01
+end-date: 2024-03-28
+link: https://blumenroeder.fr/en/
 ---
 
 import ProjectText from '../../components/home/ProjectText.astro';
