--- a/src/content/projects/hermita.mdx
+++ b/src/content/projects/hermita.mdx
@@ -23,9 +23,9 @@ import hermitawebsite from '../../assets/hermita/hermitawebsite.png';
 
 <ProjectImage src={hermitawebsite} alt="Screenshot of the website of the game Hermita" />
 
-<ProjectText title="My contributions">Creating this game required a wide range of skills. I built the website for our project, you can visit it [here](https://hermita-game.github.io/). The blog was easy to use but unfortunately, I was the only one who wrote content. Regarding my role in the team, I was working quite a lot on the creation of "tools" for the game. For example, I would define the behavior of monsters and my group members would use those objects to create every monster simply by adding images and some settings.</ProjectText>
+<ProjectText title="My contributions">Creating this game required a wide range of skills. I built the website for our project, you can visit it [here](https://hermita-game.github.io/). For the game, I handled the multiplayer connection, the behavior of entities, the inventory system and interface, the minimap generation/display and many little details that participated in making this game look complete.</ProjectText>
 
-<ProjectText title="What I learned">Since I worked on the base tools for the project, I got to work on abstract concepts, at the core of our application, which I love doing! I had to come up with unique implementations that our very specific project needed. For example, Unity provides solutions for movement but none was fitting our needs. I implemented one from scratch, including the system for the monsters to follow the player.</ProjectText>
+<ProjectText title="My role">In this project, I worked on the base tools for the game. I got to work on abstract concepts, at the core of our application, which I love doing! I had to come up with unique implementations that our very specific project needed. With another very active member, we completed each other very well because I would create the tools that would allow him to bring content in the game more easily.</ProjectText>
 
 import hermitapath from '../../assets/hermita/hermitapath.png';
 
