working transitions (kindof)

--- a/public/locales/en/process.json
+++ b/public/locales/en/process.json
@@ -2,6 +2,7 @@
     "meta": {
         "title": "Process",
         "title-long": "From Ideas to Reality",
-        "description": "View my way of working, how I'm going to solve your problem."
+        "description": "View my way of working, how I'm going to solve your problem.",
+        "scroll-cta": "Scroll down to see how I handle projects"
     }
 }
