better landing page

--- a/src/content/project/blumenroeder.mdx
+++ b/src/content/project/blumenroeder.mdx
@@ -1,5 +1,7 @@
 ---
 title: Blumenroeder Website
+cover: ../../assets/blum/screenshot1.png
+description: My father is the owner of company that builds pipe organs. Altough he already had a website, it had major issues. The website was very old, not responsive and to update its content, they had to code in html everytime. I gave it a try and first gave up because of the size of the task.
 relevance: 70
 group-size: 1
 begin-date: 2020-05-01
