--- a/src/content/project/hermita.mdx
+++ b/src/content/project/hermita.mdx
@@ -1,5 +1,7 @@
 ---
 title: Hermita
+cover: ../../assets/hermita/hermitalogo.png
+description: Hermita is a multiplayer game developed in C# using Unity. It was a school project assigned at EPITA.
 relevance: 80
 group-size: 4
 begin-date: 2022-12-01
