--- a/src/content/project/chalet.mdx
+++ b/src/content/project/chalet.mdx
@@ -1,5 +1,7 @@
 ---
 title: A chalet
+cover: ../../assets/chalet/chalet.jpg
+description: My grandparents created a community in the french alps during the 70s. They both passed away but the community is still alive. Unfortunately, it went through two consecutive fires that destroyed 2 housings and a lot of land. One evening, thinking about this, I came up with the idea of building a brand new one.
 relevance: 60
 group-size: 15
 begin-date: 2022-12-01
