cool scroll animations

--- a/src/content/project/hermita.mdx
+++ b/src/content/project/hermita.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hermita
-cover: ../../assets/hermita/hermitalogo.png
+cover: ../../assets/hermita/forest.png
 description: Hermita is a multiplayer game developed in C# using Unity. It was a school project assigned at EPITA.
 relevance: 80
 group-size: 4
