page per project

--- a/src/content/project/hermita.mdx
+++ b/src/content/project/hermita.mdx
@@ -13,28 +13,30 @@ import ProjectImage from '../../components/home/ProjectImage.astro';
 
 <ProjectText title="Summary">Hermita is a school project I worked on with three other students. We developed a game in C# using Unity. Hermita was quite an ambitious project but it was very pleasant to work on and I was able to learn a lot from it. We were asked to create a multiplayer game with a rather open theme. We used this opportunity to build a game that would actually be fun to play. </ProjectText>
 
-import hermitalogo from '../../assets/hermita/hermitalogo.png';
-import hermitafight from '../../assets/hermita/hermitafight.png';
+import forest from '../../assets/hermita/forest.png';
+import fight from '../../assets/hermita/fight.png';
 
-<ProjectImage src={hermitalogo} alt="Logo of the game Hermita" />
-<ProjectImage src={hermitafight} alt="Screenshot of the game Hermita" />
+<ProjectImage src={forest} alt="Logo of the game Hermita" />
+<ProjectImage src={fight} alt="Screenshot of the game Hermita" />
 
 <ProjectText title="The game itself">We play an old wizard whom lives alone on a sky island. However, he can play with friends online to fight monsters on a multiplayer sky island. We fight we spells only and killing monsters gives items which can be used later to craft items on the solo player island.</ProjectText>
 
-import hermitawebsite from '../../assets/hermita/hermitawebsite.png';
+import website from '../../assets/hermita/website.png';
 
-<ProjectImage src={hermitawebsite} alt="Screenshot of the website of the game Hermita" />
+<ProjectImage src={website} alt="Screenshot of the website of the game Hermita" />
 
 <ProjectText title="My contributions">Creating this game required a wide range of skills. I built the website for our project, you can visit it [here](https://hermita-game.github.io/). For the game, I handled the multiplayer connection, the behavior of entities, the inventory system and interface, the minimap generation/display and many little details that participated in making this game look complete.</ProjectText>
 
 <ProjectText title="My role">In this project, I worked on the base tools for the game. I got to work on abstract concepts, at the core of our application, which I love doing! I had to come up with unique implementations that our very specific project needed. With another very active member, we completed each other very well because I would create the tools that would allow him to bring content in the game more easily.</ProjectText>
 
-import hermitapath from '../../assets/hermita/hermitapath.png';
+import inventory from '../../assets/hermita/inventory.png';
+import shield from '../../assets/hermita/shield.png';
 
-<ProjectImage src={hermitapath} alt="Screenshot of the pathfinding system in the game Hermita" />
+<ProjectImage src={inventory} alt="Screenshot of the pathfinding system in the game Hermita" />
+<ProjectImage src={shield} alt="Screenshot of the shield system in the game Hermita" />
 
-import hermitaunity from '../../assets/hermita/hermitaunity.png';
+import unity from '../../assets/hermita/unity.png';
 
-<ProjectImage src={hermitaunity} alt="Screenshot of the Unity project of the game Hermita" />
+<ProjectImage src={unity} alt="Screenshot of the Unity project of the game Hermita" />
 
 <ProjectText title="Conclusion">This project was also a great lesson on social issues a project can face like inactive group members. I was forced to adapt and go out of my comfort zone to sometimes take the lead. All in all, I'm very proud of what we achieved. You can try the game by downloading it on our website.</ProjectText>
