--- a/src/content/project/blumenroeder.mdx
+++ b/src/content/project/blumenroeder.mdx
@@ -1,6 +1,7 @@
 ---
 title: Blumenroeder Website
 cover: ../../assets/blum/screenshot1.png
+coverAlt: Screenshot of the new website
 description: My father is the owner of company that builds pipe organs. Altough he already had a website, it had major issues. The website was very old, not responsive and to update its content, they had to code in html everytime. I gave it a try and first gave up because of the size of the task.
 relevance: 70
 group-size: 1
@@ -9,22 +10,21 @@ end-date: 2024-03-28
 link: https://blumenroeder.fr/en/
 ---
 
-import ProjectText from '../../components/home/ProjectText.astro';
-import ProjectImage from '../../components/home/ProjectImage.astro';
+import { Image } from 'astro:assets';
 
-<ProjectText title="Context">My father is the owner of company that builds pipe organs. Altough he already had a website, it had major issues. The website was very old, not responsive and to update its content, they had to code in html everytime. I gave it a try and first gave up because of the size of the task.</ProjectText>
+My father is the owner of company that builds pipe organs. Altough he already had a website, it had major issues. The website was very old, not responsive and to update its content, they had to code in html everytime. I gave it a try and first gave up because of the size of the task.
 
 import greatroom from '../../assets/blum/greatroom.jpg';
 import former from '../../assets/blum/former.png';
 
-<ProjectImage src={greatroom} alt="Great room of the Blumenroeder Workshop" />
-<ProjectImage src={former} alt="Screenshot of the former website" />
+<Image src={greatroom} alt="Great room of the Blumenroeder Workshop" />
+<Image src={former} alt="Screenshot of the former website" />
 
-<ProjectText title="1st try">A little bit later, I created a navigation menu for fun. Then, came motivation and I dived into the project. The task was interesting, I implemented a simple administration page with a [WYSIWYG](https://ckeditor.com/ckeditor-5/demo/feature-rich/) editor for each page. It is worth noting that I barely used any library and I coded almost everything from scratch.</ProjectText>
+A little bit later, I created a navigation menu for fun. Then, came motivation and I dived into the project. The task was interesting, I implemented a simple administration page with a [WYSIWYG](https://ckeditor.com/ckeditor-5/demo/feature-rich/) editor for each page. It is worth noting that I barely used any library and I coded almost everything from scratch.
 
-<ProjectText title="Final result">After a while, I was unsatisfied with the website. It was not optimal for SEO and I had kept the old navigation hierarchy with 28 pages. Thus, I built everything again from scratch. This time, I used libraries like [Strapi](https://strapi.io/), [Locomotive Scroll](https://locomotivemtl.github.io/locomotive-scroll/) and [Svelte](https://svelte.dev/). The website is now much faster, easier to maintain, translated in 3 different languages and the user experience is much smoother.</ProjectText>
+After a while, I was unsatisfied with the website. It was not optimal for SEO and I had kept the old navigation hierarchy with 28 pages. Thus, I built everything again from scratch. This time, I used libraries like [Strapi](https://strapi.io/), [Locomotive Scroll](https://locomotivemtl.github.io/locomotive-scroll/) and [Svelte](https://svelte.dev/). The website is now much faster, easier to maintain, translated in 3 different languages and the user experience is much smoother.
 
 
 import screenshot1 from '../../assets/blum/screenshot1.png';
 
-<ProjectImage src={screenshot1} alt="Screenshot of the new website" />
+<Image src={screenshot1} alt="Screenshot of the new website" />
