--- a/public/locales/en/process.json
+++ b/public/locales/en/process.json
@@ -4,5 +4,19 @@
         "title-long": "From Ideas to Reality",
         "description": "View my way of working, how I'm going to solve your problem.",
         "scroll-cta": "Scroll down to see how I handle projects"
+    },
+    "step-1": {
+        "title": "Step 1: Research",
+        "texts": "<p>I prefer being well-informed about what I work on.</p><p>If your field is new to me, I'll study it to better understand your needs.</p>"
+    },
+    "step-2": {
+        "title": "Step 2: Chatting",
+        "texts": "<p>If we work together, we'll talk about <strong>you</strong>.</p><p>It's not about doing my project for you, it's about <strong>your</strong> project.</p><p>You know your business better than anyone else, so I want to learn about you!</p>",
+        "text-change": "Awesome innovation"
+    },
+    "step-3" : {
+        "title": "Experimenting",
+        "texts": "<p>Let's not dive into design right away.</p><p>I first work on a prototype to test the waters.</p><p>It's a great way to see if we're on the right track.</p>",
+        "text-change": "|____Prototype____|<br>|____@______&_____|<br>|____*$____^?_____|"
     }
 }
