--- a/public/locales/en/process.json
+++ b/public/locales/en/process.json
@@ -7,7 +7,9 @@
     },
     "general": {
         "project": "Project",
-        "projectBtn": "Launch"
+        "projectBtn": "Launch",
+        "end-text": "Let's build this together!",
+        "end-cta": "Contact me"
     },
     "step-1": {
         "title": "Step 1: Research",
@@ -24,7 +26,7 @@
     },
     "step-4": {
         "title": "Step 4: Design",
-        "texts": "<p>This is the part where I'll bring you something unique.</p><p>I'm not trying to make it good for everyone.</p><p>I want to make it <em>perfect</em> for the <strong>right</strong> people.</p>"
+        "texts": "<p>I'm french, I love bold cuisine.</p><p>I'm not trying to make it good for everyone.</p><p>I want to make it <em>perfect</em> for the <strong>right</strong> people.</p>"
     },
     "step-5": {
         "title": "Step 5: Development",
