--- a/src/content/project/blumenroeder.mdx
+++ b/src/content/project/blumenroeder.mdx
@@ -2,7 +2,7 @@
 title: Blumenroeder Website
 cover: ../../assets/blum/screenshot1.png
 coverAlt: Screenshot of the new website
-description: My father is the owner of company that builds pipe organs. Altough he already had a website, it had major issues. The website was very old, not responsive and to update its content, they had to code in html everytime. I gave it a try and first gave up because of the size of the task.
+description: I built a new website for my father's company that builds pipe organs. It features an advanced administration page and unique style.
 relevance: 70
 group-size: 1
 begin-date: 2020-05-01
