--- a/src/content/project/ocr.mdx
+++ b/src/content/project/ocr.mdx
@@ -2,7 +2,7 @@
 title: Sudoku Solver
 cover: ../../assets/ocr/solved.png
 coverAlt: Solved image of a sudoku grid
-description: This was one of the school projects for EPITA. We had to create an application in C to solve sudoku grids. However, the challenge was not to compute the solution but to extract the grid information from a picture. We weren't allowed to use any external library so we had to code everything from scratch.
+description: I worked on building a Sudoku solver from scratch. I implemented a neural network and features to extract the grid from a picture.
 relevance: 50
 group-size: 4
 begin-date: 2023-09-01
