--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -9,5 +9,20 @@
         "occupation": "Student at EPITA",
         "location": "Strasbourg, France",
         "email": "an.blumenroeder@gmail.com"
+    },
+    "personnality": {
+        "title-1": "I am...",
+        "adjectives": {
+            "1": "curious",
+            "2": "determined",
+            "3": "passionate",
+            "4": "serious"
+        },
+        "title-2": "I can...",
+        "skills": {
+            "1": "adapt to new situations",
+            "2": "speak French, English and German",
+            "3": "solve your problem"
+        }
     }
 }
